fix(modal): fix text not center aligned when align="center" is set
affects: @entur/modal

--- a/packages/modal/src/Modal.scss
+++ b/packages/modal/src/Modal.scss
@@ -44,6 +44,7 @@ $modal-animation-duration: $timings-medium;
       display: flex;
       flex-direction: column;
       align-items: center;
+      text-align: center;
     }
 
     &-end {
